Implement rbac endpoints
