# api/rbac.go
@@ -1,9 +1,13 @@
 package api
 
 import (
+	"api-server/orm"
 	"context"
+	"errors"
+	"slices"
 
 	"github.com/EnclaveRunner/shareddeps/auth"
+	"github.com/google/uuid"
 	"github.com/rs/zerolog/log"
 )
 
@@ -15,6 +19,7 @@ func (s *Server) GetRbacEndpoint(
 	groups, err := auth.GetGroupsForResource(request.Body.Endpoint)
 	if err != nil {
 		log.Error().Err(err).Msg("Failed to get groups for resource")
+
 		return nil, &EmptyInternalServerError{}
 	}
 
@@ -26,12 +31,12 @@ func (s *Server) PostRbacEndpoint(
 	ctx context.Context,
 	request PostRbacEndpointRequestObject,
 ) (PostRbacEndpointResponseObject, error) {
-	groupExists, err := auth.ResourceGroupExists(request.Body.ResourceGroupName)
+	groupExists, err := auth.ResourceGroupExists(request.Body.ResourceGroup)
 	if err != nil {
 		return nil, &EmptyInternalServerError{}
 	}
 	if !groupExists {
-		return &PostRbacEndpoint404JSONResponse{
+		return PostRbacEndpoint404JSONResponse{
 			GenericNotFoundJSONResponse{
 				Error: "Provided resource group does not exist",
 			},
@@ -40,13 +45,13 @@ func (s *Server) PostRbacEndpoint(
 
 	err = auth.AddResourceToGroup(
 		request.Body.Endpoint,
-		request.Body.ResourceGroupName,
+		request.Body.ResourceGroup,
 	)
 	if err != nil {
 		return nil, &EmptyInternalServerError{}
 	}
 
-	return &PostRbacEndpoint201Response{}, nil
+	return PostRbacEndpoint201Response{}, nil
 }
 
 // DeleteRbacEndpoint implements StrictServerInterface.
@@ -54,14 +59,15 @@ func (s *Server) DeleteRbacEndpoint(
 	ctx context.Context,
 	request DeleteRbacEndpointRequestObject,
 ) (DeleteRbacEndpointResponseObject, error) {
-	groupExists, err := auth.ResourceGroupExists(*request.Body.ResourceGroup)
+	groupExists, err := auth.ResourceGroupExists(request.Body.ResourceGroup)
 	if err != nil {
 		log.Error().Err(err).Msg("Failed to check if resource group exists")
+
 		return nil, &EmptyInternalServerError{}
 	}
 
 	if !groupExists {
-		return &DeleteRbacEndpoint404JSONResponse{
+		return DeleteRbacEndpoint404JSONResponse{
 			GenericNotFoundJSONResponse{
 				Error: "Provided resource group does not exist",
 			},
@@ -70,8 +76,15 @@ func (s *Server) DeleteRbacEndpoint(
 
 	err = auth.RemoveResourceFromGroup(
 		request.Body.Endpoint,
-		*request.Body.ResourceGroup,
+		request.Body.ResourceGroup,
 	)
+	if err != nil {
+		log.Error().Err(err).Msg("Failed to delete resources from group")
+
+		return nil, &EmptyInternalServerError{}
+	}
+
+	return DeleteRbacEndpoint200Response{}, nil
 }
 
 // GetRbacPolicy implements StrictServerInterface.
@@ -79,7 +92,23 @@ func (s *Server) GetRbacPolicy(
 	ctx context.Context,
 	request GetRbacPolicyRequestObject,
 ) (GetRbacPolicyResponseObject, error) {
-	panic("unimplemented")
+	policies, err := auth.ListPolicies()
+	if err != nil {
+		log.Error().Err(err).Msg("Failed to list policies")
+
+		return nil, &EmptyInternalServerError{}
+	}
+
+	policiesParsed := make([]RBACPolicy, len(policies))
+	for i, policy := range policies {
+		policiesParsed[i] = RBACPolicy{
+			Role:          policy.UserGroup,
+			ResourceGroup: policy.ResourceGroup,
+			Permission:    RBACPolicyPermission(policy.Permission),
+		}
+	}
+
+	return (*GetRbacPolicy200JSONResponse)(&policiesParsed), nil
 }
 
 // PostRbacPolicy implements StrictServerInterface.
@@ -87,7 +116,56 @@ func (s *Server) PostRbacPolicy(
 	ctx context.Context,
 	request PostRbacPolicyRequestObject,
 ) (PostRbacPolicyResponseObject, error) {
-	panic("unimplemented")
+	var fieldErrors []ErrField
+
+	// Validate resourceGroup field
+	resourceGroupExists, err := auth.ResourceGroupExists(
+		request.Body.ResourceGroup,
+	)
+	if err != nil {
+		log.Error().Err(err).Msg("Failed to check if resource group exists")
+
+		return nil, &EmptyInternalServerError{}
+	}
+
+	if !resourceGroupExists {
+		fieldErrors = append(
+			fieldErrors,
+			ErrField{Field: "resourceGroup", Error: "Resource Group does not exist"},
+		)
+	}
+
+	// Validate role field
+	roleExists, err := auth.UserGroupExists(request.Body.Role)
+	if err != nil {
+		log.Error().Err(err).Msg("Failed to check if role exists")
+
+		return nil, &EmptyInternalServerError{}
+	}
+
+	if !roleExists {
+		fieldErrors = append(
+			fieldErrors,
+			ErrField{Field: "role", Error: "Role does not exist"},
+		)
+	}
+
+	if len(fieldErrors) > 0 {
+		return PostRbacPolicy404JSONResponse{fieldErrors}, nil
+	}
+
+	err = auth.AddPolicy(
+		request.Body.Role,
+		request.Body.ResourceGroup,
+		string(request.Body.Permission),
+	)
+	if err != nil {
+		log.Error().Err(err).Msg("Adding policy failed")
+
+		return nil, &EmptyInternalServerError{}
+	}
+
+	return PostRbacPolicy201Response{}, nil
 }
 
 // DeleteRbacPolicy implements StrictServerInterface.
@@ -95,7 +173,18 @@ func (s *Server) DeleteRbacPolicy(
 	ctx context.Context,
 	request DeleteRbacPolicyRequestObject,
 ) (DeleteRbacPolicyResponseObject, error) {
-	panic("unimplemented")
+	err := auth.RemovePolicy(
+		request.Body.Role,
+		request.Body.ResourceGroup,
+		string(request.Body.Permission),
+	)
+	if err != nil {
+		log.Error().Err(err).Msg("Failed to remove policy")
+
+		return nil, &EmptyInternalServerError{}
+	}
+
+	return DeleteRbacPolicy200Response{}, nil
 }
 
 // GetRbacListResourceGroups implements StrictServerInterface.
@@ -103,7 +192,21 @@ func (s *Server) GetRbacListResourceGroups(
 	ctx context.Context,
 	request GetRbacListResourceGroupsRequestObject,
 ) (GetRbacListResourceGroupsResponseObject, error) {
-	panic("unimplemented")
+	resourceGroups, err := auth.GetResourceGroups()
+	if err != nil {
+		log.Error().Err(err).Msg("Failed to get resource groups")
+
+		return nil, &EmptyInternalServerError{}
+	}
+
+	var resourceGroupsParsed []string
+	for _, rg := range resourceGroups {
+		if !slices.Contains(resourceGroupsParsed, rg.GroupName) {
+			resourceGroupsParsed = append(resourceGroupsParsed, rg.GroupName)
+		}
+	}
+
+	return (*GetRbacListResourceGroups200JSONResponse)(&resourceGroupsParsed), nil
 }
 
 // GetRbacResourceGroup implements StrictServerInterface.
@@ -111,7 +214,21 @@ func (s *Server) GetRbacResourceGroup(
 	ctx context.Context,
 	request GetRbacResourceGroupRequestObject,
 ) (GetRbacResourceGroupResponseObject, error) {
-	panic("unimplemented")
+	resources, err := auth.GetResourceGroup(request.Body.ResourceGroup)
+	if err != nil {
+		var errNotFound *auth.NotFoundError
+		if errors.As(err, &errNotFound) {
+			return GetRbacResourceGroup404JSONResponse{
+				GenericNotFoundJSONResponse{"Provided resource group does not exist"},
+			}, nil
+		}
+
+		log.Error().Err(err).Msg("Failed to get resource group")
+
+		return nil, &EmptyInternalServerError{}
+	}
+
+	return (*GetRbacResourceGroup200JSONResponse)(&resources), nil
 }
 
 // HeadRbacResourceGroup implements StrictServerInterface.
@@ -119,7 +236,20 @@ func (s *Server) HeadRbacResourceGroup(
 	ctx context.Context,
 	request HeadRbacResourceGroupRequestObject,
 ) (HeadRbacResourceGroupResponseObject, error) {
-	panic("unimplemented")
+	exists, err := auth.ResourceGroupExists(request.Body.ResourceGroup)
+	if err != nil {
+		log.Error().Err(err).Msg("Failed to get resource group")
+
+		return nil, &EmptyInternalServerError{}
+	}
+
+	if !exists {
+		return HeadRbacResourceGroup404JSONResponse{
+			GenericNotFoundJSONResponse{"Provided resource group does not exist"},
+		}, nil
+	}
+
+	return HeadRbacResourceGroup404JSONResponse{}, nil
 }
 
 // PostRbacResourceGroup implements StrictServerInterface.
@@ -127,7 +257,14 @@ func (s *Server) PostRbacResourceGroup(
 	ctx context.Context,
 	request PostRbacResourceGroupRequestObject,
 ) (PostRbacResourceGroupResponseObject, error) {
-	panic("unimplemented")
+	err := auth.CreateResourceGroup(request.Body.ResourceGroup)
+	if err != nil {
+		log.Error().Err(err).Msg("Failed to create resource group")
+
+		return nil, &EmptyInternalServerError{}
+	}
+
+	return PostRbacResourceGroup201Response{}, nil
 }
 
 // DeleteRbacResourceGroup implements StrictServerInterface.
@@ -135,7 +272,19 @@ func (s *Server) DeleteRbacResourceGroup(
 	ctx context.Context,
 	request DeleteRbacResourceGroupRequestObject,
 ) (DeleteRbacResourceGroupResponseObject, error) {
-	panic("unimplemented")
+	err := auth.RemoveResourceGroup(request.Body.ResourceGroup)
+	if err != nil {
+		var errNotFound *auth.NotFoundError
+		if errors.As(err, &errNotFound) {
+			return DeleteRbacResourceGroup404JSONResponse{
+				GenericNotFoundJSONResponse{"Provided resource group does not exist"},
+			}, nil
+		}
+
+		return nil, &EmptyInternalServerError{}
+	}
+
+	return DeleteRbacResourceGroup200Response{}, nil
 }
 
 // GetRbacListRoles implements StrictServerInterface.
@@ -143,7 +292,21 @@ func (s *Server) GetRbacListRoles(
 	ctx context.Context,
 	request GetRbacListRolesRequestObject,
 ) (GetRbacListRolesResponseObject, error) {
-	panic("unimplemented")
+	groups, err := auth.GetUserGroups()
+	if err != nil {
+		log.Error().Err(err).Msg("Failed to get user groups")
+
+		return nil, &EmptyInternalServerError{}
+	}
+
+	var roles []string
+	for _, ug := range groups {
+		if !slices.Contains(roles, ug.GroupName) {
+			roles = append(roles, ug.GroupName)
+		}
+	}
+
+	return (*GetRbacListRoles200JSONResponse)(&roles), nil
 }
 
 // GetRbacRole implements StrictServerInterface.
@@ -151,7 +314,19 @@ func (s *Server) GetRbacRole(
 	ctx context.Context,
 	request GetRbacRoleRequestObject,
 ) (GetRbacRoleResponseObject, error) {
-	panic("unimplemented")
+	users, err := auth.GetUserGroup(request.Body.Role)
+	if err != nil {
+		var errNotFound *auth.NotFoundError
+		if errors.As(err, &errNotFound) {
+			return GetRbacRole404JSONResponse{
+				GenericNotFoundJSONResponse{"Provided resource group does not exist"},
+			}, nil
+		}
+
+		log.Error().Err(err).Msg("Failed to get user groups")
+	}
+
+	return (*GetRbacRole200JSONResponse)(&users), nil
 }
 
 // HeadRbacRole implements StrictServerInterface.
@@ -159,7 +334,20 @@ func (s *Server) HeadRbacRole(
 	ctx context.Context,
 	request HeadRbacRoleRequestObject,
 ) (HeadRbacRoleResponseObject, error) {
-	panic("unimplemented")
+	roleExists, err := auth.UserGroupExists(request.Body.Role)
+	if err != nil {
+		log.Error().Err(err).Msg("Failed to check if role exists")
+
+		return nil, &EmptyInternalServerError{}
+	}
+
+	if !roleExists {
+		return HeadRbacRole404JSONResponse{
+			GenericNotFoundJSONResponse{"Provided role does not exist"},
+		}, nil
+	}
+
+	return HeadRbacRole200Response{}, nil
 }
 
 // PostRbacRole implements StrictServerInterface.
@@ -167,7 +355,14 @@ func (s *Server) PostRbacRole(
 	ctx context.Context,
 	request PostRbacRoleRequestObject,
 ) (PostRbacRoleResponseObject, error) {
-	panic("unimplemented")
+	err := auth.CreateUserGroup(request.Body.Role)
+	if err != nil {
+		log.Error().Err(err).Msg("Failed to create role")
+
+		return nil, &EmptyInternalServerError{}
+	}
+
+	return PostRbacRole201Response{}, nil
 }
 
 // DeleteRbacRole implements StrictServerInterface.
@@ -175,7 +370,28 @@ func (s *Server) DeleteRbacRole(
 	ctx context.Context,
 	request DeleteRbacRoleRequestObject,
 ) (DeleteRbacRoleResponseObject, error) {
-	panic("unimplemented")
+	err := auth.RemoveUserGroup(request.Body.Role)
+	if err != nil {
+		var errNotFound *auth.NotFoundError
+		if errors.As(err, &errNotFound) {
+			return DeleteRbacRole404JSONResponse{
+				GenericNotFoundJSONResponse{"Provided role does not exist"},
+			}, nil
+		}
+
+		var errConflict *auth.ConflictError
+		if errors.As(err, &errConflict) {
+			return DeleteRbacRole409JSONResponse{
+				errConflict.Reason,
+			}, nil
+		}
+
+		log.Error().Err(err).Msg("Failed to delete role")
+
+		return nil, &EmptyInternalServerError{}
+	}
+
+	return DeleteRbacRole200Response{}, nil
 }
 
 // GetRbacUser implements StrictServerInterface.
@@ -183,7 +399,37 @@ func (s *Server) GetRbacUser(
 	ctx context.Context,
 	request GetRbacUserRequestObject,
 ) (GetRbacUserResponseObject, error) {
-	panic("unimplemented")
+	uuidParsed, err := uuid.Parse(request.Body.UserId)
+	if err != nil {
+		return GetRbacUser400JSONResponse{
+			GenericBadRequestJSONResponse{
+				Error: "Invalid UUID format for userId",
+			},
+		}, nil
+	}
+
+	_, err = orm.GetUserByID(uuidParsed)
+	if err != nil {
+		var errNotFound *orm.NotFoundError
+		if errors.As(err, &errNotFound) {
+			return GetRbacUser404JSONResponse{
+				GenericNotFoundJSONResponse{
+					Error: "User not found",
+				},
+			}, nil
+		}
+
+		return nil, &EmptyInternalServerError{}
+	}
+
+	users, err := auth.GetGroupsForUser(request.Body.UserId)
+	if err != nil {
+		log.Error().Err(err).Msg("Failed to get roles for user")
+
+		return nil, &EmptyInternalServerError{}
+	}
+
+	return (*GetRbacUser200JSONResponse)(&users), nil
 }
 
 // PostRbacUser implements StrictServerInterface.
@@ -191,7 +437,48 @@ func (s *Server) PostRbacUser(
 	ctx context.Context,
 	request PostRbacUserRequestObject,
 ) (PostRbacUserResponseObject, error) {
-	panic("unimplemented")
+	uuidParsed, err := uuid.Parse(request.Body.UserId)
+	if err != nil {
+		return PostRbacUser400JSONResponse{
+			GenericBadRequestJSONResponse{
+				Error: "Invalid UUID format for userId",
+			},
+		}, nil
+	}
+
+	_, err = orm.GetUserByID(uuidParsed)
+	if err != nil {
+		var errNotFound *orm.NotFoundError
+		if errors.As(err, &errNotFound) {
+			return PostRbacUser404JSONResponse{
+				GenericNotFoundJSONResponse{
+					Error: "User not found",
+				},
+			}, nil
+		}
+
+		log.Error().Err(err).Msg("Failed to get user by ID")
+
+		return nil, &EmptyInternalServerError{}
+	}
+
+	err = auth.AddUserToGroup(request.Body.UserId, request.Body.Role)
+	if err != nil {
+		var errNotFound *auth.NotFoundError
+		if errors.As(err, &errNotFound) {
+			return PostRbacUser404JSONResponse{
+				GenericNotFoundJSONResponse{
+					Error: "User not found",
+				},
+			}, nil
+		}
+
+		log.Error().Err(err).Msg("Failed to add user to group")
+
+		return nil, &EmptyInternalServerError{}
+	}
+
+	return PostRbacUser201Response{}, nil
 }
 
 // DeleteRbacUser implements StrictServerInterface.
@@ -199,5 +486,44 @@ func (s *Server) DeleteRbacUser(
 	ctx context.Context,
 	request DeleteRbacUserRequestObject,
 ) (DeleteRbacUserResponseObject, error) {
-	panic("unimplemented")
+	uuidParsed, err := uuid.Parse(request.Body.UserId)
+	if err != nil {
+		return DeleteRbacUser400JSONResponse{
+			GenericBadRequestJSONResponse{
+				Error: "Invalid UUID format for userId",
+			},
+		}, nil
+	}
+
+	_, err = orm.GetUserByID(uuidParsed)
+	if err != nil {
+		var errNotFound *orm.NotFoundError
+		if errors.As(err, &errNotFound) {
+			return DeleteRbacUser404JSONResponse{
+				GenericNotFoundJSONResponse{
+					Error: "Specified user not found",
+				},
+			}, nil
+		}
+
+		log.Error().Err(err).Msg("Failed to get user by ID")
+
+		return nil, &EmptyInternalServerError{}
+	}
+
+	err = auth.RemoveUserFromGroup(request.Body.UserId, request.Body.Role)
+	if err != nil {
+		var errNotFound *auth.NotFoundError
+		if errors.As(err, &errNotFound) {
+			return DeleteRbacUser404JSONResponse{
+				GenericNotFoundJSONResponse{"Specified role does not exist"},
+			}, nil
+		}
+
+		log.Error().Err(err).Msg("Failed to remove user from role")
+
+		return nil, &EmptyInternalServerError{}
+	}
+
+	return DeleteRbacUser200Response{}, nil
 }
